fixed the font size of the h1 on small screen sizes

--- a/src/components/GameSettingsAndRules/GameSettingsAndRules.css
+++ b/src/components/GameSettingsAndRules/GameSettingsAndRules.css
@@ -29,6 +29,6 @@
   }
 
   .game-rules-settings h1 {
-    font-size: clamp(1rem, 4vw, 4rem);
+    font-size: clamp(1.4rem, 4vw, 4rem);
   }
 }
